--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
-        "mailersend/laravel-driver": "^2.7"
+        "mailersend/laravel-driver": "^2.7",
+        "nyholm/psr7": "^1.8",
+        "php-http/guzzle7-adapter": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
